Am adaugat framework Materializecss

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>GIT</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
 <body>
-<div>
-    <h1>Mai repede sa ajung la copanie ca sa lucrez</h1>
+<div class="container">
+    <h1>Iesiti afara fratii mei</h1>
+    <p>Mai repede sa ajung la copanie ca sa lucrez</p>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
