--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Mai repede sa ajung la copanie ca sa lucrez</p>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
